fix avatar squishing

--- a/src/blocks/Header.css
+++ b/src/blocks/Header.css
@@ -14,6 +14,7 @@
 .header__profile-link {
   text-decoration: none;
   color: black;
+  min-width: 170px;
 }
 
 .header__button {
@@ -50,10 +51,8 @@
 
 .header__avatar-null {
   margin-left: 12px;
-  max-height: 40px;
-  max-width: 40px;
-  min-height: 40px;
-  min-width: 40px;
+  height: 40px;
+  width: 40px;
   border-radius: 50%;
   object-fit: cover;
   border: 1px solid;
