--- a/src/blocks/SideBar.css
+++ b/src/blocks/SideBar.css
@@ -3,6 +3,7 @@
 }
 
 .sidebar__user-container {
+  min-width: 162px;
   margin-bottom: 20px;
   display: flex;
   gap: 12px;
@@ -18,10 +19,8 @@
 }
 
 .sidebar__avatar-null {
-  min-height: 56px;
-  max-height: 56px;
-  min-width: 56px;
-  max-width: 56px;
+  height: 56px;
+  width: 56px;
   border-radius: 50%;
   object-fit: cover;
   border: 1px solid;
